# midas-pure-rust

./: .gitignore  Cargo.toml  out.tsv  results.csv  test.json
src/: lib.rs  main.rs  normal_core.rs  parse_evtx.rs  relational_midas.rs
