[package]
name = "midas"
version = "0.1.0"
authors = ["m-m-adams <52469396+m-m-adams@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cms = {git = "https://github.com/m-m-adams/count-min-sketch.git"}
evtx = "0.7.2"
chrono = "0.4"
serde_json = "1.0.64"